[gd_scene load_steps=17 format=3 uid="uid://cxc7hdh2bfaua"]

[ext_resource type="Script" path="res://Scenes/Run/run.gd" id="1_677sc"]
[ext_resource type="PackedScene" uid="uid://b8kl0n2023ls" path="res://Scenes/Map/map.tscn" id="1_lttax"]
[ext_resource type="AudioStream" uid="uid://dkjpfxwnnav7n" path="res://art/(Loop) Forest Exploration.wav" id="2_cs2oa"]
[ext_resource type="Resource" uid="uid://bppubvq5o6we1" path="res://Scenes/Run/run_startup.tres" id="2_frqca"]
[ext_resource type="PackedScene" uid="uid://h8raeqewus5h" path="res://Scenes/UI/gold_ui.tscn" id="4_176gq"]
[ext_resource type="PackedScene" uid="uid://bw500f1i5gcmf" path="res://Scenes/UI/card_pile_opener.tscn" id="4_bxmm5"]
[ext_resource type="PackedScene" uid="uid://c5lfr6iekpgsw" path="res://Scenes/UI/health_ui.tscn" id="5_d6yos"]
[ext_resource type="Texture2D" uid="uid://b3qf12ya5vqjv" path="res://art/deck.png" id="5_y0tcp"]
[ext_resource type="Texture2D" uid="uid://dg28spu0yy8jh" path="res://art/deck_pressed.png" id="6_42h24"]
[ext_resource type="PackedScene" uid="uid://cm4qn36ne6lgl" path="res://Scenes/UI/card_pile_view.tscn" id="7_724ho"]
[ext_resource type="PackedScene" uid="uid://cbqxrujgnl8x6" path="res://Scenes/relics_handler/relic_handler.tscn" id="7_fyylk"]
[ext_resource type="Shader" path="res://Scenes/Battle/CrtShader.gdshader" id="8_cd2bd"]
[ext_resource type="PackedScene" uid="uid://q42tn6ne8vk" path="res://Scenes/relics_handler/relic_tool_tip_pop_up.tscn" id="12_v2hpe"]
[ext_resource type="Script" path="res://Scenes/Run/pause_menu.gd" id="13_c70su"]

[sub_resource type="LabelSettings" id="LabelSettings_g1dda"]
outline_size = 3
outline_color = Color(0, 0, 0, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_q21tn"]
shader = ExtResource("8_cd2bd")
shader_parameter/resolution = Vector2(1280, 720)
shader_parameter/scan_line_amount = 0.144
shader_parameter/warp_amount = 0.0
shader_parameter/noise_amount = 0.09
shader_parameter/interference_amount = 0.2
shader_parameter/grille_amount = 0.1
shader_parameter/grille_size = 1.0
shader_parameter/vignette_amount = 0.6
shader_parameter/vignette_intensity = 0.4
shader_parameter/aberation_amount = 0.5
shader_parameter/roll_line_amount = 0.3
shader_parameter/roll_speed = 1.0
shader_parameter/scan_line_strength = -6.519
shader_parameter/pixel_strength = -1.5

[node name="Run" type="Node" groups=["run"]]
script = ExtResource("1_677sc")
music = ExtResource("2_cs2oa")
run_startup = ExtResource("2_frqca")

[node name="Map" parent="." instance=ExtResource("1_lttax")]

[node name="CurrentView" type="Node" parent="."]

[node name="DebugButtons" type="VBoxContainer" parent="."]
anchors_preset = 9
anchor_bottom = 1.0
grow_vertical = 2
alignment = 1

[node name="MapButton" type="Button" parent="DebugButtons"]
unique_name_in_owner = true
visible = false
layout_mode = 2
text = "MapButton"

[node name="BattleButton" type="Button" parent="DebugButtons"]
unique_name_in_owner = true
visible = false
layout_mode = 2
text = "BattleButton"

[node name="ShopButton" type="Button" parent="DebugButtons"]
unique_name_in_owner = true
visible = false
layout_mode = 2
text = "ShopButton"

[node name="RewardButton" type="Button" parent="DebugButtons"]
unique_name_in_owner = true
visible = false
layout_mode = 2
text = "RewardButton"

[node name="CampfireButton" type="Button" parent="DebugButtons"]
unique_name_in_owner = true
visible = false
layout_mode = 2
text = "CampfireButton
"

[node name="TreasureButton" type="Button" parent="DebugButtons"]
unique_name_in_owner = true
visible = false
layout_mode = 2
text = "TreasureButton
"

[node name="TopBar" type="CanvasLayer" parent="."]
layer = 3

[node name="Background" type="ColorRect" parent="TopBar"]
custom_minimum_size = Vector2(0, 20)
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2
color = Color(1, 0.333333, 1, 0.501961)

[node name="BarItems" type="HBoxContainer" parent="TopBar"]
custom_minimum_size = Vector2(0, 18)
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2

[node name="HealthUI" parent="TopBar/BarItems" instance=ExtResource("5_d6yos")]
unique_name_in_owner = true
custom_minimum_size = Vector2(35, 0)
layout_mode = 2
show_max_hp = true

[node name="GoldUI" parent="TopBar/BarItems" instance=ExtResource("4_176gq")]
unique_name_in_owner = true
custom_minimum_size = Vector2(30, 0)
layout_mode = 2

[node name="RelicHandlerContainer" type="CenterContainer" parent="TopBar/BarItems"]
layout_mode = 2
size_flags_horizontal = 3

[node name="RelicHandler" parent="TopBar/BarItems/RelicHandlerContainer" instance=ExtResource("7_fyylk")]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="DeckButton" parent="TopBar/BarItems" node_paths=PackedStringArray("counter") instance=ExtResource("4_bxmm5")]
unique_name_in_owner = true
custom_minimum_size = Vector2(16, 16)
layout_mode = 2
texture_normal = ExtResource("5_y0tcp")
texture_pressed = ExtResource("6_42h24")
texture_hover = ExtResource("6_42h24")
counter = NodePath("Label")

[node name="Label" type="Label" parent="TopBar/BarItems/DeckButton"]
layout_mode = 0
offset_left = -7.0
offset_top = 13.0
offset_right = 3.0
offset_bottom = 19.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
text = "99"
horizontal_alignment = 2

[node name="DeckView" parent="TopBar" instance=ExtResource("7_724ho")]
unique_name_in_owner = true
visible = false

[node name="RelicToolTip" parent="TopBar" instance=ExtResource("12_v2hpe")]
unique_name_in_owner = true
visible = false

[node name="PauseMenu" type="CanvasLayer" parent="."]
process_mode = 3
layer = 5
visible = false
script = ExtResource("13_c70su")

[node name="ColorRect" type="ColorRect" parent="PauseMenu"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.67451)

[node name="VBoxContainer" type="VBoxContainer" parent="PauseMenu"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -47.0
offset_top = -20.0
offset_right = 47.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="PauseMenu/VBoxContainer"]
layout_mode = 2
text = "Pause"
label_settings = SubResource("LabelSettings_g1dda")
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="PauseMenu/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="BackToGameButton" type="Button" parent="PauseMenu/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(40, 14)
layout_mode = 2
text = "Back"

[node name="SaveAndQuitButton" type="Button" parent="PauseMenu/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(50, 14)
layout_mode = 2
text = "Main Menu"

[node name="CRTShader" type="CanvasLayer" parent="."]
layer = 99

[node name="ColorRect" type="ColorRect" parent="CRTShader"]
process_priority = 4
material = SubResource("ShaderMaterial_q21tn")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
metadata/_edit_lock_ = true
